<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent" >

	<LinearLayout
	  android:orientation="horizontal" 
	  android:layout_width="fill_parent" 
	  android:layout_height="wrap_content"
	  android:minHeight="100sp"
	  android:layout_weight="1" 
	  android:minWidth="240sp">
		 
		 <ListView 
    		android:layout_height="fill_parent" 
    		android:layout_width="fill_parent" 
    		android:id="@+id/listViewFolder">
    	</ListView>
	
	</LinearLayout>
	
	<LinearLayout
        android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:orientation="horizontal">
		<Button 
			android:text="@string/CreateFolder" 
			android:id="@+id/buttonCreate" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		
		<Button 
			android:text="@string/Apply"
			android:id="@+id/ButtonApply" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1">
		</Button>
		
		<Button 
			android:text="@string/Cancel" 
			android:id="@+id/ButtonCancel" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1">
		</Button>

	</LinearLayout>
	
</LinearLayout>
